--- a/ImmiCanada/Views/Home/Index.cshtml
+++ b/ImmiCanada/Views/Home/Index.cshtml
@@ -286,46 +286,4 @@
 </div>
 @{Html.RenderAction("InterestedSection", "Home");}
 @*<hr class="news-line-top" />*@
-<div class="row section-news pad-top40px" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-    @*Link for Carousel multiple items : https://azmind.com/bootstrap-carousel-multiple-items/*@
-    <div class="top-content">
-        <div class="container-fluid">
-            <div id="carousel-example" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner row w-100 mx-auto" role="listbox">
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3 active">
-                        <img src="~/Content/images/News/News4.jpg" class="img-fluid mx-auto d-block" alt="img1">
-                    </div>
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="~/Content/images/News/News4.jpg" class="img-fluid mx-auto d-block" alt="img2">
-                    </div>
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="~/Content/images/News/News4.jpg" class="img-fluid mx-auto d-block" alt="img3">
-                    </div>
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="~/Content/images/News/News4.jpg" class="img-fluid mx-auto d-block" alt="img4">
-                    </div>
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="~/Content/images/News/News4.jpg" class="img-fluid mx-auto d-block" alt="img5">
-                    </div>
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="~/Content/images/News/News4.jpg" class="img-fluid mx-auto d-block" alt="img6">
-                    </div>
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="~/Content/images/News/News4.jpg" class="img-fluid mx-auto d-block" alt="img7">
-                    </div>
-                    <div class="carousel-item col-12 col-sm-6 col-md-4 col-lg-3">
-                        <img src="~/Content/images/News/News4.jpg" class="img-fluid mx-auto d-block" alt="img8">
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carousel-example" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carousel-example" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
+@{Html.RenderAction("NewsSlide", "Home");}
