--- a/ImmiCanada/Views/Component/Works.cshtml
+++ b/ImmiCanada/Views/Component/Works.cshtml
@@ -11,7 +11,7 @@
     {
         <div class="col-sm-4 mar-bottom30px" data-aos="zoom-in-down">
             <div class="card float-right card-highlight text-right">
-                <img src="@work.Base64Image" class="card-img-top max-height245px" alt="Card image cap" />
+                <img src="@work.Base64Image" class="card-img-top max-height245px" alt="Card image cap" style="height: 200px" />
                 <div class="card-body pos-rel text-left min-height225px">
                     <div class="work-item-main-title font-size14px">@work.Position</div>
                     <div class="work-item-sec-title">@work.WorkType</div>
