--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -139,6 +139,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     padding-right: 0px !important;
 }
 
+.remove-paddingbottom {
+    padding-bottom: 0px !important;
+}
+
 .pad-left65px {
     padding-left: 65px;
 }
@@ -187,8 +191,12 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     margin-right: 3px;
 }
 
+.mar-right10px {
+    margin-right: 10px !important;
+}
+
 .mar-right15px {
-    margin-right: 15px;
+    margin-right: 15px !important;
 }
 
 .mar-botttom6px {
@@ -211,8 +219,8 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     margin-top: 60px;
 }
 
-.min-height225px {
-    min-height: 225px;
+.min-height210px {
+    min-height: 210px;
 }
 
 .max-height245px {
@@ -952,12 +960,18 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-size: 14px;
 }
 
-    .service-detail-container .general-info i,
-    .works-container i {
+    .service-detail-container .general-info i {
         font-size: 20px;
         color: #96dbff;
         margin-right: 5px;
     }
+
+.works-container i {
+    width: 25px;
+    color: #96dbff;
+    margin-right: 5px;
+    font-size: 20px;
+}
 
 .fee-border-left {
     border-left: 1px solid #ccc;
