--- a/ImmiCanada/Views/Works/Edit.cshtml
+++ b/ImmiCanada/Views/Works/Edit.cshtml
@@ -15,6 +15,20 @@
         <div class="form-group mt-3">
             <input type="submit" value="Chỉnh sửa" class="btn btn-primary" /> @Html.ActionLink("Trở về", "Index")
         </div>
+
+        <div class="form-group row">
+            <div class="col-6">
+                <label>Tên công việc</label>
+                @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-6">
+                <label>Yêu cầu ngôn ngữ</label>
+                @Html.EditorFor(model => model.Language, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Language, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
         <div class="form-group row">
             <div class="col-6">
                 <label>Chương trình</label>
