--- a/ImmiCanada/Views/Works/Index.cshtml
+++ b/ImmiCanada/Views/Works/Index.cshtml
@@ -20,7 +20,13 @@
 <table class="table">
     <tr>
         <th class="width-short-column">
+            Tên công việc
+        </th>
+        <th class="width-short-column">
             Chương trình
+        </th>
+        <th class="width-short-column">
+            Ngôn ngữ
         </th>
         <th class="width-short-column">
             NOC
@@ -62,7 +68,13 @@
     {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>            
+            <td>
                 @Html.DisplayFor(modelItem => item.ImmigrationService.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Language)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Noc.Title)
