--- a/ImmiCanada/Content/styles.css
+++ b/ImmiCanada/Content/styles.css
@@ -1105,7 +1105,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
         height: 400px !important;
     }
 
-.btn {
+.btn-work {
     background-color: #FFFFFF;
     color: #5a5757;
     padding: 12px 16px;
