--- a/ImmiCanada/Views/Component/Works.cshtml
+++ b/ImmiCanada/Views/Component/Works.cshtml
@@ -1,50 +1,55 @@
 ﻿@{
     @model List<ImmiCanada.Entities.Work>
 }
-<div class="pad-top85px full-width works-container">
-    <div class="row">
-        <img src="~/Content/images/left-bg.jpg" class="img-left-icon" /><p class="works-container-title">CÔNG VIỆC LIÊN QUAN</p>
-    </div>
-</div>
-<div class="row pad-top40px works-container">
-    @foreach (var work in Model)
+@{
+    if (Model.Count > 0)
     {
-        <div class="col-sm-4 mar-bottom30px" data-aos="zoom-in-down">
-            <div class="card float-right card-highlight text-right">
-                <img src="@work.Base64Image" class="card-img-top" alt="Card image cap" style="height: 230px" />
-                <div class="card-body pos-rel text-left min-height210px remove-paddingbottom ">
-                    <div class="work-item-main-title font-size14px">@work.Position</div>
-                    <hr />
-                    <div class="row mar-top10px mar-bottom10px">
-                        <div class="col-sm-6 text-left">
-                            <i class="fa fa-usd" aria-hidden="true"></i><strong>Mức lương</strong>
-                        </div>
-                        <div class="col-sm-6 text-right">@work.Income</div>
-                    </div>
-                    <div class="row mar-top10px mar-bottom10px">
-                        <div class="col-sm-6 text-left">
-                            <i class="fa fa-map-marker" aria-hidden="true"></i><strong>Yêu cầu ngôn ngữ</strong>
-                        </div>
-                        <div class="col-sm-6 text-right">N/A</div>
-                    </div>
-                    <div class="row mar-top10px mar-bottom10px">
-                        <div class="col-sm-6 text-left">
-                            <i class="fa fa-calendar-check-o" aria-hidden="true"></i><strong>Kinh nghiệm</strong>
-                        </div>
-                        <div class="col-sm-6 text-right">@work.Experience</div>
-                    </div>
-                    <div class="row mar-top10px">
-                        <div class="col-sm-6 text-left">
-                            <i class="fa fa-university" aria-hidden="true"></i><strong>Yêu cầu bằng cấp</strong>
-                        </div>
-                        <div class="col-sm-6 text-right">@work.Certificate</div>
-                    </div>
-                </div>
-                <div class="works-form-footer text-center">
-                    <hr />
-                    <input type="button" id="btnJoinUrban" value="XEM CHI TIẾT" class="btn-join mar-bottom30px" onclick="javascript: window.location.href = '/WorkInterface/Detail/@work.WorkId'" />
-                </div>
+        <div class="pad-top85px full-width works-container">
+            <div class="row">
+                <img src="~/Content/images/left-bg.jpg" class="img-left-icon" /><p class="works-container-title">CÔNG VIỆC LIÊN QUAN</p>
             </div>
         </div>
+        <div class="row pad-top40px works-container">
+            @foreach (var work in Model)
+            {
+                <div class="col-sm-4 mar-bottom30px" data-aos="zoom-in-down">
+                    <div class="card float-right card-highlight text-right">
+                        <img src="@work.Base64Image" class="card-img-top" alt="Card image cap" style="height: 230px" />
+                        <div class="card-body pos-rel text-left min-height210px remove-paddingbottom ">
+                            <div class="work-item-main-title font-size14px">@work.Position</div>
+                            <hr />
+                            <div class="row mar-top10px mar-bottom10px">
+                                <div class="col-sm-6 text-left">
+                                    <i class="fa fa-usd" aria-hidden="true"></i><strong>Mức lương</strong>
+                                </div>
+                                <div class="col-sm-6 text-right">@work.Income</div>
+                            </div>
+                            <div class="row mar-top10px mar-bottom10px">
+                                <div class="col-sm-6 text-left">
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i><strong>Yêu cầu ngôn ngữ</strong>
+                                </div>
+                                <div class="col-sm-6 text-right">N/A</div>
+                            </div>
+                            <div class="row mar-top10px mar-bottom10px">
+                                <div class="col-sm-6 text-left">
+                                    <i class="fa fa-calendar-check-o" aria-hidden="true"></i><strong>Kinh nghiệm</strong>
+                                </div>
+                                <div class="col-sm-6 text-right">@work.Experience</div>
+                            </div>
+                            <div class="row mar-top10px">
+                                <div class="col-sm-6 text-left">
+                                    <i class="fa fa-university" aria-hidden="true"></i><strong>Yêu cầu bằng cấp</strong>
+                                </div>
+                                <div class="col-sm-6 text-right">@work.Certificate</div>
+                            </div>
+                        </div>
+                        <div class="works-form-footer text-center">
+                            <hr />
+                            <input type="button" id="btnJoinUrban" value="XEM CHI TIẾT" class="btn-join mar-bottom30px" onclick="javascript: window.location.href = '/WorkInterface/Detail/@work.WorkId'" />
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
     }
-</div>
+}
