--- a/ImmiCanada/Views/WorkInterface/Detail.cshtml
+++ b/ImmiCanada/Views/WorkInterface/Detail.cshtml
@@ -21,8 +21,8 @@
     <div class="col-sm-8 offset-2 work-detail-block">
         <div class="row">
             <div class="col-sm-12 pad-top20px">
-                <button class="btn"><i class="fa fa-share" aria-hidden="true"></i>&nbsp;Chia sẻ</button>
-                <button class="btn"><i class="fa fa-star-o" aria-hidden="true"></i>&nbsp;@Model.ImmigrationService.Title</button>
+                <button class="btn-work"><i class="fa fa-share" aria-hidden="true"></i>&nbsp;Chia sẻ</button>
+                <button class="btn-work"><i class="fa fa-star-o" aria-hidden="true"></i>&nbsp;@Model.ImmigrationService.Title</button>
             </div>
         </div>
         <div class="row">
