--- a/ImmiCanada/Views/Service/Detail.cshtml
+++ b/ImmiCanada/Views/Service/Detail.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     @model ImmiCanada.Entities.ImmigrationService
 
-    ViewBag.Title = "Chi Tiết Chương trình đầu tư";
+    ViewBag.Title = @Model.Title;
     Layout = "~/Views/Shared/_Layout_Without_Banner.cshtml";
 }
 <style>
