--- a/ImmiCanada/Views/Home/Index.cshtml
+++ b/ImmiCanada/Views/Home/Index.cshtml
@@ -7,7 +7,29 @@
         margin-right: 0;
     }
 </style>
+@{
+    string GetDetailUrl(ImmiCanada.Entities.ImmigrationService service)
+    {
+        return convertToUnSign2(string.Format("/dich-vu/tinh-bang-{0}/{1}/{2}", service.State1.Name.ToLower().Replace(" ", "-"), service.Title.ToLower().Replace(" ", "-"), service.Id));
+    }
 
+    string convertToUnSign2(string s)
+    {
+        string stFormD = s.Normalize(System.Text.NormalizationForm.FormD);
+        System.Text.StringBuilder sb = new System.Text.StringBuilder();
+        for (int ich = 0; ich < stFormD.Length; ich++)
+        {
+            System.Globalization.UnicodeCategory uc = System.Globalization.CharUnicodeInfo.GetUnicodeCategory(stFormD[ich]);
+            if (uc != System.Globalization.UnicodeCategory.NonSpacingMark)
+            {
+                sb.Append(stFormD[ich]);
+            }
+        }
+        sb = sb.Replace('Đ', 'D');
+        sb = sb.Replace('đ', 'd');
+        return (sb.ToString().Normalize(System.Text.NormalizationForm.FormD));
+    }
+}
 <div class="container-fluid">
     <div class="row pad-top40px" data-aos="fade-up">
         <div class="row col-sm-12">
@@ -186,7 +208,7 @@
                                 </div>
                             </div>
                             <div class="row outstanding-form-footer">
-                                <input type="button" id="btnJoinUrban" value="THAM GIA" class="btn-join" onclick="javascript: window.location.href='/Service/Detail/@outstandingservice.Id'" />
+                                <input type="button" id="btnJoinUrban" value="THAM GIA" class="btn-join" onclick="javascript: window.location.href='@GetDetailUrl(outstandingservice)'" />
                             </div>
                         </div>
                     </div>
