--- a/ImmiCanada/Views/Works/Index.cshtml
+++ b/ImmiCanada/Views/Works/Index.cshtml
@@ -32,6 +32,9 @@
             NOC
         </th>
         <th class="width-short-column">
+            Mã NOC
+        </th>
+        <th class="width-short-column">
             Mức lương
         </th>
         <th class="width-short-column">
@@ -78,6 +81,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Noc.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.WorkNumber)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Income)
