--- a/ImmiCanada/Views/Works/Edit.cshtml
+++ b/ImmiCanada/Views/Works/Edit.cshtml
@@ -35,10 +35,18 @@
                 @Html.DropDownList("ImmigrationServiceId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ImmigrationServiceId, "", new { @class = "text-danger" })
             </div>
+        </div>
+
+        <div class="form-group row">
             <div class="col-6">
                 <label>NOC</label>
                 @Html.DropDownList("NocId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.NocId, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.NocId, "", new { @class = "text-danger" })            
+            </div>
+            <div class="col-6">
+                <label>Mã NOC</label>
+                @Html.EditorFor(model => model.WorkNumber, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.WorkNumber, "", new { @class = "text-danger" })
             </div>
         </div>
 
